--- a/src/index.scss
+++ b/src/index.scss
@@ -121,3 +121,9 @@ ul{
         font-size: 26px;
     }
 }
+.profile{
+  color: #55AD9B;
+  text-decoration: none;
+  font-size: 26px;
+  font-weight: 600;
+}
